--- a/fts-semeso-server/package.json
+++ b/fts-semeso-server/package.json
@@ -4,6 +4,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "npx tsc",
     "start": "nodemon app.js"
   },
   "keywords": [],
